# Earth-Monitoring-Assistant

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py  middleware.py  seed.py
backend/app/acquisition/: __init__.py  models.py  providers.py
backend/app/analysis/: __init__.py  indices.py  raster_io.py  validation.py
backend/app/api/: assistant.py  auth.py  common.py  dashboard.py  deps.py  events.py  global_monitoring.py  imagery.py  insights.py  monitoring.py  planetary.py  projects.py  reports.py  solar_system.py
backend/app/bootstrap/: global_monitoring.py  local_mode.py
backend/app/core/: __init__.py  config.py  database.py  security.py
backend/app/detectors/: base.py  vegetation_change.py
backend/app/imagery/: __init__.py  harvester.py  sources.py
backend/app/learning/: __init__.py  anomalies.py  baselines.py  forecasts.py  metrics.py  recorder.py
backend/app/models/: __init__.py  entities.py
backend/app/schemas/: api.py  (+5 more)
backend/migrations/: env.py
backend/tests/: test_application.py  test_assistant.py  test_config.py  test_ephemeris.py  test_geo.py  test_global_monitoring.py  test_imagery.py  test_indices.py  test_learning.py  test_local_mode.py  test_monitoring.py  test_monitoring_scheduler.py  test_planetary.py  test_raster_io.py  test_raster_validation.py  test_schemas.py  test_security.py  test_solar_system.py  test_spot_detections.py  test_vegetation_change_detector.py
(+52 files in other folders)
