[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "earth-monitor-api"
version = "0.1.0"
description = "Auditable geospatial monitoring API for Earth observation events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "apscheduler>=3.10,<4",
  "argon2-cffi>=23.1,<26",
  "asyncpg>=0.30,<1",
  "email-validator>=2.2,<3",
  "fastapi>=0.115,<1",
  "geoalchemy2>=0.17,<1",
  "httpx>=0.28,<1",
  "numpy>=2.1,<3",
  "planetary-computer>=1.0,<2",
  "pydantic-settings>=2.7,<3",
  "prometheus-client>=0.22,<1",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.18,<1",
  "rasterio>=1.4,<2",
  "shapely>=2.0,<3",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "coverage[toml]>=7.6,<8",
  "httpx2>=2.5,<3",
  "mypy>=1.14,<2",
  "pip-tools>=7.5,<8",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
  "types-shapely>=2.0,<3",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["rasterio.*", "planetary_computer.*", "apscheduler.*", "affine.*"]
ignore_missing_imports = true
